maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:14: error: type mismatch;
 found   : (Int, Int)
 required: Int
  return(i,j)
        ^